gcc/testsuite/gm2/pim/pass/forloop2.mod
MODULE forloop2 ;

TYPE
   colour = (red, green, blue) ;


PROCEDURE init ;
VAR
   c: colour ;
BEGIN
   FOR c := red TO blue DO
   END
END init ;


BEGIN
   init
END forloop2.
